--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <link rel="stylesheet" href="./src/styles/main.css">
     <script src="./dist/bundle.js"></script>
     <canvas id="canvas"></canvas>
+    <audio controls loop src="./src/audio/rocket_snail.m4a"></audio>
 </body>
 </html>
